WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268480
REGRESSION (
273804@main
): [ macOS wk1 Debug ] http/tests/media/video-throttled-load-metadata.html is a constant crash
https://bugs.webkit.org/show_bug.cgi?id=268480
Summary
REGRESSION (273804@main): [ macOS wk1 Debug ] http/tests/media/video-throttle...
Marta Darbinyan
Reported
2024-01-31 10:19:41 PST
Description: http/tests/media/video-throttled-load-metadata.html Is a constant crash on macOS ToT on wk1 Debug since the commit
273804@main
was introduced to main. This issue can be reproduced by using the command: run-webkit-tests --root --exit-after-n-failures 1 --debug <test> History:
https://results.webkit.org/?suite=layout-tests&test=http%2Ftests%2Fmedia%2Fvideo-throttled-load-metadata.html&flavor=wk1&style=debug
Crash Log: ASSERTION FAILED: m_table /Volumes/Data/worker/Apple-Monterey-Debug-Build/build/WebKitBuild/Debug/usr/local/include/wtf/HashTable.h(223) : void WTF::HashTableConstIterator<WTF::HashTable<WTF::RetainPtr<WebCoreNSURLSessionDataTask>, WTF::KeyValuePair<WTF::RetainPtr<WebCoreNSURLSessionDataTask>, std::unique_ptr<WebCore::RangeResponseGenerator::Data::TaskData>>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::RetainPtr<WebCoreNSURLSessionDataTask>, std::unique_ptr<WebCore::RangeResponseGenerator::Data::TaskData>>>, WTF::DefaultHash<WTF::RetainPtr<WebCoreNSURLSessionDataTask>>, WTF::HashMap<WTF::RetainPtr<WebCoreNSURLSessionDataTask>, std::unique_ptr<WebCore::RangeResponseGenerator::Data::TaskData>>::KeyValuePairTraits, WTF::HashTraits<WTF::RetainPtr<WebCoreNSURLSessionDataTask>>>, WTF::RetainPtr<WebCoreNSURLSessionDataTask>, WTF::KeyValuePair<WTF::RetainPtr<WebCoreNSURLSessionDataTask>, std::unique_ptr<WebCore::RangeResponseGenerator::Data::TaskData>>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::RetainPtr<WebCoreNSURLSessionDataTask>, std::unique_ptr<WebCore::RangeResponseGenerator::Data::TaskData>>>, WTF::DefaultHash<WTF::RetainPtr<WebCoreNSURLSessionDataTask>>, WTF::HashMap<WTF::RetainPtr<WebCoreNSURLSessionDataTask>, std::unique_ptr<WebCore::RangeResponseGenerator::Data::TaskData>>::KeyValuePairTraits, WTF::HashTraits<WTF::RetainPtr<WebCoreNSURLSessionDataTask>>>::checkValidity() const [HashTable = WTF::HashTable<WTF::RetainPtr<WebCoreNSURLSessionDataTask>, WTF::KeyValuePair<WTF::RetainPtr<WebCoreNSURLSessionDataTask>, std::unique_ptr<WebCore::RangeResponseGenerator::Data::TaskData>>, WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::RetainPtr<WebCoreNSURLSessionDataTask>, std::unique_ptr<WebCore::RangeResponseGenerator::Data::TaskData>>>, WTF::DefaultHash<WTF::RetainPtr<WebCoreNSURLSessionDataTask>>, WTF::HashMap<WTF::RetainPtr<WebCoreNSURLSessionDataTask>, std::unique_ptr<WebCore::RangeResponseGenerator::Data::TaskData>>::KeyValuePairTraits, WTF::HashTraits<WTF::RetainPtr<WebCoreNSURLSessionDataTask>>>, Key = WTF::RetainPtr<WebCoreNSURLSessionDataTask>, Value = WTF::KeyValuePair<WTF::RetainPtr<WebCoreNSURLSessionDataTask>, std::unique_ptr<WebCore::RangeResponseGenerator::Data::TaskData>>, Extractor = WTF::KeyValuePairKeyExtractor<WTF::KeyValuePair<WTF::RetainPtr<WebCoreNSURLSessionDataTask>, std::unique_ptr<WebCore::RangeResponseGenerator::Data::TaskData>>>, HashFunctions = WTF::DefaultHash<WTF::RetainPtr<WebCoreNSURLSessionDataTask>>, Traits = WTF::HashMap<WTF::RetainPtr<WebCoreNSURLSessionDataTask>, std::unique_ptr<WebCore::RangeResponseGenerator::Data::TaskData>>::KeyValuePairTraits, KeyTraits = WTF::HashTraits<WTF::RetainPtr<WebCoreNSURLSessionDataTask>>] 1 0x119bf659c WTFCrash Link:
https://build.webkit.org/results/Apple-Monterey-Debug-AppleSilicon-WK1-Tests/273804@main%20(10100)/http/tests/media/video-throttled-load-metadata-crash-log.txt
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-31 10:20:10 PST
<
rdar://problem/122025990
>
EWS
Comment 2
2024-01-31 10:54:43 PST
Test gardening commit
273842@main
(caebe8f993ec): <
https://commits.webkit.org/273842@main
> Reviewed commits have been landed. Closing PR #23600 and removing active labels.
Jean-Yves Avenard [:jya]
Comment 3
2024-01-31 19:37:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23644
EWS
Comment 4
2024-02-01 02:26:30 PST
Committed
273892@main
(e70021fd8743): <
https://commits.webkit.org/273892@main
> Reviewed commits have been landed. Closing PR #23644 and removing active labels.
Jean-Yves Avenard [:jya]
Comment 5
2024-02-01 05:35:30 PST
***
Bug 268507
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug