REGRESSION (273804@main): [ macOS wk1 Debug ] http/tests/media/video-throttled-load-metadata.html is a constant crash https://bugs.webkit.org/show_bug.cgi?id=268480 rdar://122025990

Reviewed by Youenn Fablet.

273804@main incorrectly removed the delayed task removal to perform the operation immediately.
However, this method is called while iterating the HashTable from which we are removing the task causing
the iterator to become invalid.
Re-introduce the delayed operation, add comment in code.

Covered by existing tests.

* LayoutTests/platform/mac-wk1/TestExpectations:
* Source/WebCore/platform/network/cocoa/RangeResponseGenerator.mm:
(WebCore::RangeResponseGenerator::giveResponseToTaskIfBytesInRangeReceived):

Canonical link: https://commits.webkit.org/273892@main